--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  
+  workflow_call:
+    outputs:
+      artifact-name:
+        value: resume-pdf
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
