ci: remove caps on release-latest

--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -10,7 +10,7 @@ on:
 jobs:
 
   build: 
-    uses: ./.github/workflows/CI.yml
+    uses: ./.github/workflows/ci.yml
 
   # This workflow contains a single job called "release"
   release:
